--- a/src/UI/Menus/VerticalMenu/VerticalMenu.module.css
+++ b/src/UI/Menus/VerticalMenu/VerticalMenu.module.css
@@ -18,6 +18,7 @@
 
 .vertical-menu__author {
   margin-top: auto;
+  margin-bottom: 1rem;
 
   font-size: 1.25rem;
   opacity: 0.5;
